# IRIS-GUI

./: DrixitTest.py  GUITest.py  IRISGUI.py  LICENSE  README.md  python
Classes/: classes.py
drixit/: pyproject.toml
drixit/GUI_V2/: IRISGUI.py  IRISInter.py
drixit/tests/: DrixitTest.py  IRISGUI.py
drixit/tests/extra/: IRISInter.py
drixit/window_display_testing/: IRISGUI_testing.py
